# tokio-modbus

./: Cargo.toml
.github/: actionlint.yaml
.github/workflows/: dependency-audit.yaml  pre-commit.yaml  publish-release.yaml
src/: error.rs  lib.rs  slave.rs
src/client/: mod.rs
src/client/sync/: mod.rs
src/codec/: mod.rs  rtu.rs
src/frame/: mod.rs  rtu.rs  tcp.rs
src/service/: rtu.rs  tcp.rs
