# SPDX-FileCopyrightText: Copyright (c) 2017-2025 slowtec GmbH <post@slowtec.de>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "tokio-modbus"
description = "Tokio-based Modbus library"
version = "0.16.1"
authors = ["slowtec GmbH <post@slowtec.de>", "Markus Kohlhase <markus.kohlhase@slowtec.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["fieldbus", "modbus", "hardware", "automation"]
homepage = "https://github.com/slowtec/tokio-modbus"
repository = "https://github.com/slowtec/tokio-modbus"
edition = "2021"
rust-version = "1.76"
include = ["/src", "/CHANGELOG.md", "/README.md", "/LICENSES"]

[package.metadata.docs.rs]
all-features = true

# Please specify precise dependency versions in Cargo.toml:
# <https://users.rust-lang.org/t/psa-please-specify-precise-dependency-versions-in-cargo-toml/71277>

[dependencies]
async-trait = "*"
byteorder = "*"
bytes = "*"
futures-core = { version = "*", optional = true, default-features = false }
futures-util = { version = "*", optional = true, default-features = false }
log = "*"
smallvec = { version = "*", optional = true, default-features = false }
socket2 = { version = "*", optional = true, default-features = false }
thiserror = "*"
tokio = { version = "*", default-features = false, features = ["io-util"] }
# Disable default-features to exclude unused dependency on libudev
tokio-serial = { version = "*", optional = true, default-features = false }
tokio-util = { version = "*", optional = true, default-features = false, features = ["codec"] }

[dev-dependencies]
anyhow = "*"
env_logger = "*"
futures = "*"
tokio = { version = "*", default-features = false, features = [
  "macros",
  "rt-multi-thread",
  "time",
] }
tokio-serial = { version = "*", default-features = false }
rustls-pemfile = "*"
tokio-rustls = { version = "*", default-features = false }
pkcs8 = { version = "*", features = ["encryption", "pem", "std"] }
pem = "*"
pki-types = { package = "rustls-pki-types", version = "*" }
rustls = { version = "*", default-features = false, features = ["std"] }

[features]
default = ["rtu", "tcp"]
rtu = ["dep:futures-core", "futures-util/sink", "dep:smallvec", "dep:tokio-util"]
tcp = ["dep:futures-core", "futures-util/sink", "tokio/net", "dep:tokio-util"]
rtu-sync = ["rtu", "sync", "dep:tokio-serial"]
tcp-sync = ["tcp", "sync"]
rtu-server = ["rtu", "server", "tokio/macros", "dep:tokio-serial"]
tcp-server = ["tcp", "server", "socket2/all", "tokio/macros", "tokio/rt-multi-thread"]
rtu-over-tcp-server = ["rtu", "tcp-server"]
# The following features are internal and must not be used in dependencies.
sync = ["dep:futures-core", "futures-util/sink", "tokio/time", "tokio/rt"]
server = []

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "rtu-client-sync"
path = "examples/rtu-client-sync.rs"
required-features = ["rtu-sync"]

[[example]]
name = "rtu-client"
path = "examples/rtu-client.rs"
required-features = ["rtu"]

[[example]]
name = "rtu-server"
path = "examples/rtu-server.rs"
required-features = ["rtu-server"]

[[example]]
name = "rtu-server-address"
path = "examples/rtu-server-address.rs"
required-features = ["rtu-server"]

[[example]]
name = "tcp-client-custom-fn"
path = "examples/tcp-client-custom-fn.rs"
required-features = ["tcp"]

[[example]]
name = "tcp-client-sync"
path = "examples/tcp-client-sync.rs"
required-features = ["tcp-sync"]

[[example]]
name = "tcp-client"
path = "examples/tcp-client.rs"
required-features = ["tcp"]

[[example]]
name = "tcp-server"
path = "examples/tcp-server.rs"
required-features = ["tcp-server"]

[[example]]
name = "rtu-over-tcp-server"
path = "examples/rtu-over-tcp-server.rs"
required-features = ["rtu-over-tcp-server"]

[[example]]
name = "tls-client"
path = "examples/tls-client.rs"
required-features = ["tcp"]

[[example]]
name = "tls-server"
path = "examples/tls-server.rs"
required-features = ["tcp-server"]
